fix capitalization of weekdays

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </body>
 <script>
     let words = {
-        "days": ["Dimanche", "Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi"],
+        "days": ["dimanche", "lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi"],
         "months": ["janvier", "février", "mars", "avril", "mai", "juin", "juillet", "août", "septembre", "octobre", "novembre", "décembre"]
     };
     let title_Obj = document.getElementById("date");
