--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>french date spelling</title>
     <style>
+        body {
+            font-family: 'Courier New', monospace;
+        }
+
         .container {
             height: 50%;
         }
