add menue plan link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
         }
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
     </style>
 </head>
 
@@ -32,6 +37,12 @@
             <h1 id="date"></h1>
         </div>
     </div>
+    <footer class="footer">
+        <div class="links">
+            <a href="./stupla/index.html">stupla</a>
+            <a href="https://zfv.ch/de/microsites/mensa-gymnasium-liestal/menuplan">menüplan</a>
+        </div>
+    </footer>
 
 </body>
 <script>
