--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         a {
             text-decoration: none;
             color: black;
+            font-weight: bold;
         }
     </style>
 </head>
