--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             text-decoration: none;
             color: black;
             font-weight: bold;
+            padding: 0px 2px;
+            border: 3px solid black;
         }
     </style>
 </head>
