fix menue page opening in same tab

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <footer class="footer">
         <div class="links">
             <a href="./stupla/index.html">stupla</a>
-            <a href="https://zfv.ch/de/microsites/mensa-gymnasium-liestal/menuplan">menüplan</a>
+            <a href="https://zfv.ch/de/microsites/mensa-gymnasium-liestal/menuplan" target="_blank">menüplan</a>
         </div>
     </footer>
 
