--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             color: black;
             font-weight: bold;
             padding: 0px 2px;
+        }
+
+        a.text {
             border: 3px solid black;
         }
     </style>
@@ -42,8 +45,11 @@
     </div>
     <footer class="footer">
         <div class="links">
-            <a href="./stupla/index.html">stupla</a>
-            <a href="https://zfv.ch/de/microsites/mensa-gymnasium-liestal/menuplan" target="_blank">menüplan</a>
+            <a class="text" href="./stupla/index.html">stupla</a>
+            <a class="text" href="https://zfv.ch/de/microsites/mensa-gymnasium-liestal/menuplan"
+                target="_blank">menüplan</a>
+            <a href="http://github.com/GianGisin/giangisin.github.io"><img style="width: 20px;"
+                    src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt=""></a>
         </div>
     </footer>
 
