new links folks get your new links here

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <div class="links">
             <a class="text" href="https://zfv.ch/de/microsites/mensa-gymnasium-liestal/menuplan"
                 target="_blank">menüplan</a>
+            <a class="text" href="https://portal.sbl.ch/"
+                target="_blank">portal</a>
+            <a class="text" href="https://stupla.gymliestal.ch/4Ae.html"
+                target="_blank">stupla</a>
             <a href="http://github.com/GianGisin/giangisin.github.io"><img style="width: 20px;"
                     src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt=""></a>
         </div>
